--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                                             <th class="text-end">Action</th>
                                         </tr>
                                     </thead>
-                                    <tbody id="productContent"></tbody>
+                                    <tbody id="userData"></tbody>
                                 </table>
 
                                 <!-- CONTENT FOOTER -->
@@ -940,7 +940,7 @@
                                     <div class="row">
                                         <div class="col-2 form-group mb-2">
                                             <label for="id" class="form-label">ID</label>
-                                            <input type="text" name="id" id="id" class="form-control" rules="required" aria-describedby="helpId" />
+                                            <input type="text" readonly name="id" id="id" class="form-control" rules="required" aria-describedby="helpId" />
                                             <small class="form-message"></small>
                                         </div>
                                         <div class="col-5 form-group mb-2">
@@ -963,14 +963,14 @@
 
                                 <div class="mt-3">
                                     <div class="nav nav-tabs justify-content-center" role="tablist">
-                                        <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#nav-student" title="Student" type="button" role="tab" aria-controls="nav-student" aria-selected="true">
+                                        <button class="nav-link active" data-user="student" data-bs-toggle="tab" data-bs-target="#nav-student" title="Student" type="button" role="tab" aria-controls="nav-student" aria-selected="true">
                                             <img width="65" height="65" src="https://img.icons8.com/pastel-glyph/60/student-male--v2.png" alt="student-male--v2" />
                                         </button>
-                                        <button class="nav-link mx-5" data-bs-toggle="tab" data-bs-target="#nav-employee" title="Employee" type="button" role="tab" aria-controls="nav-employee" aria-selected="false">
+                                        <button class="nav-link mx-5" data-user="employee" data-bs-toggle="tab" data-bs-target="#nav-employee" title="Employee" type="button" role="tab" aria-controls="nav-employee" aria-selected="false">
                                             <img src="./assets/img/Icon/icons8-manager-80.png" alt="Student" />
                                         </button>
-                                        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-customer" title="Customer" type="button" role="tab" aria-controls="nav-customer" aria-selected="false">
-                                            <img src="./assets/img/Icon/icons8-customer-80.png" alt="Student" />
+                                        <button class="nav-link" data-user="customer" data-bs-toggle="tab" data-bs-target="#nav-customer" title="Customer" type="button" role="tab" aria-controls="nav-customer" aria-selected="false">
+                                            <img src="./assets/img/Icon/icons8-customer-80.png" alt="" />
                                         </button>
                                     </div>
                                     <div class="tab-content mt-3">
@@ -978,17 +978,17 @@
                                             <div class="row">
                                                 <div class="col-4 form-group mb-2">
                                                     <label for="math" class="form-label">Math</label>
-                                                    <input type="number" name="math" id="math" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <input type="number" disabled name="math" id="math" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                                 <div class="col-4 form-group mb-2">
                                                     <label for="physical" class="form-label">Physical</label>
-                                                    <input type="number" name="physical" id="physical" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <input type="number" disabled name="physical" id="physical" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                                 <div class="col-4 form-group mb-2">
                                                     <label for="chemistry" class="form-label">Chemistry</label>
-                                                    <input type="number" name="chemistry" id="chemistry" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <input type="number" disabled name="chemistry" id="chemistry" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                             </div>
@@ -997,12 +997,12 @@
                                             <div class="row">
                                                 <div class="col-6 form-group mb-2">
                                                     <label for="daysWorked" class="form-label">Days of worked</label>
-                                                    <input type="number" name="daysWorked" id="daysWorked" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <input type="number" disabled name="daysWorked" id="daysWorked" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                                 <div class="col-6 form-group mb-2">
                                                     <label for="salary" class="form-label">Daily Salary</label>
-                                                    <input type="number" name="salary" id="salary" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <input type="number" disabled name="salary" id="salary" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                             </div>
@@ -1010,18 +1010,18 @@
                                         <div class="tab-pane fade" id="nav-customer" role="tabpanel" aria-labelledby="nav-customer" tabindex="0">
                                             <div class="row">
                                                 <div class="col-4 form-group mb-2">
-                                                    <label for="" class="form-label">Company Name</label>
-                                                    <input type="text" name="id" id="id" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <label for="companyName" class="form-label">Company Name</label>
+                                                    <input type="text" disabled name="companyName" id="companyName" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                                 <div class="col-4 form-group mb-2">
-                                                    <label for="" class="form-label">Invoice Value</label>
-                                                    <input type="text" name="name" id="name" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <label for="invoice" class="form-label">Invoice Value</label>
+                                                    <input type="text" disabled name="invoice" id="invoice" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                                 <div class="col-4 form-group mb-2">
-                                                    <label for="" class="form-label">Rating</label>
-                                                    <input type="text" name="name" id="name" class="form-control" rules="required" aria-describedby="helpId" />
+                                                    <label for="rating" class="form-label">Rating</label>
+                                                    <input type="text" disabled name="rating" id="rating" class="form-control" rules="required" aria-describedby="helpId" />
                                                     <small class="form-message"></small>
                                                 </div>
                                             </div>
@@ -1029,8 +1029,8 @@
                                     </div>
                                 </div>
                                 <div class="text-end mt-3">
-                                    <button type="button" class="btn btn-secondary-db" data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary-db">Add Now!</button>
+                                    <button type="button" id="closeAddPerson" class="btn btn-secondary-db" data-bs-dismiss="modal">Close</button>
+                                    <button id="getFormBtn" class="btn btn-primary-db"></button>
                                 </div>
                             </form>
                         </div>
